ves-middle/tests/t2_test_variables_must_be_defined.test
let global = "ok"

{
    mut local = "ok"
    local = "ok"
    
    print(global, local, "ok")
}

print(global, "ok")
print(local, "error")
print(undefined, "error")

%output

error: Undefined variable `local`
   ┌─ <source: #970f04b023f7451c>:11:7
   │
11 │ print(local, "error")
   │       ^^^^^

error: Undefined variable `undefined`
   ┌─ <source: #970f04b023f7451c>:12:7
   │
12 │ print(undefined, "error")
   │       ^^^^^^^^^
